# JSC.js

./: .gclient  .gitignore  BUILD.gn  Makefile.emscripten  README.md  VER.txt  build.bat  link.param  prep_env.bat  v8_benchmark.js  vs-chromium-project.txt
Source/JavaScriptCore/: BUILD.gn  BytecodeCacheVersion.h  DerivedSources.make  config.h  jsc.cpp  jscjs.cpp
Source/JavaScriptCore/API/: APIUtils.h  JSBase.h  JSBaseInternal.h  JSClassRef.h  JSContextRef.cpp  WebKitAvailability.h
Source/JavaScriptCore/DerivedSources/: DerivedSources_JavaScriptCore.make  gen.bat  gen.sh
Source/JavaScriptCore/DerivedSources/JavaScriptCore/: AirOpcode.h  AirOpcodeGenerated.h  AirOpcodeUtils.h  ArrayConstructor.lut.h  AsyncFromSyncIteratorPrototype.lut.h  AsyncGeneratorPrototype.lut.h  BigIntConstructor.lut.h  BigIntPrototype.lut.h  BooleanPrototype.lut.h  BytecodeCacheVersion.h  BytecodeIndices.h  BytecodeStructs.h  Bytecodes.h  CombinedDomains.json  DateConstructor.lut.h  DatePrototype.lut.h  EnabledInspectorDomains  ErrorPrototype.lut.h  GeneratorPrototype.lut.h  InitBytecodes.asm  InjectedScriptSource.h  InjectedScriptSource.min.js  InspectorInstrumentationObject.lut.h  IntlCanonicalizeLanguage.h  IntlCollatorConstructor.lut.h  IntlCollatorPrototype.lut.h  IntlDateTimeFormatConstructor.lut.h  IntlDateTimeFormatPrototype.lut.h  IntlNumberFormatConstructor.lut.h  IntlNumberFormatPrototype.lut.h  IntlObject.lut.h  IntlPluralRulesConstructor.lut.h  IntlPluralRulesPrototype.lut.h  JSCBuiltins.cpp  JSDataViewPrototype.lut.h  JSGlobalObject.lut.h  JSInternalPromiseConstructor.lut.h  JSModuleLoader.lut.h  JSONObject.lut.h  JSPromiseConstructor.lut.h  (+39 more)
Source/JavaScriptCore/DerivedSources/JavaScriptCore/ForwardingHeaders/JavaScriptCore/: AirOpcodeUtils.h  ArrayIteratorPrototype.lut.h  BigIntPrototype.lut.h  BooleanPrototype.lut.h  BytecodeStructs.h  Bytecodes.h  DatePrototype.lut.h  ErrorPrototype.lut.h  GCSegmentedArray.h  InjectedScriptSource.h  InspectorBackendDispatchers.h  InspectorFrontendDispatchers.h  InspectorInstrumentationObject.lut.h  InspectorProtocolObjects.h  IntlCanonicalizeLanguage.h  IntlDateTimeFormatConstructor.lut.h  IntlNumberFormatConstructor.lut.h  JSBase.h  JSCJSValue.h  (+32 more)
Source/JavaScriptCore/DerivedSources/JavaScriptCore/inspector/: InspectorAlternateBackendDispatchers.h  InspectorBackendCommands.js  InspectorBackendDispatchers.cpp  InspectorBackendDispatchers.h  InspectorFrontendDispatchers.cpp  InspectorProtocolObjects.cpp  InspectorProtocolObjects.h
Source/JavaScriptCore/DerivedSources/JavaScriptCore/yarr/: RegExpJitTables.h  UnicodePatternTables.h  YarrCanonicalizeUnicode.cpp
Source/JavaScriptCore/JSCJS/: headerify.py  jscjs.cpp  v8_benchmark.js  v8_benchmark.js.h
Source/JavaScriptCore/JavaScriptCore.vcxproj/: JavaScriptCore.proj
Source/JavaScriptCore/PORT/: EventLoop.cpp
Source/JavaScriptCore/builtins/: BuiltinNames.cpp
Source/JavaScriptCore/bytecode/: BytecodeDumper.cpp  BytecodeIntrinsicRegistry.cpp  BytecodeList.json  BytecodeLivenessAnalysis.cpp  BytecodeRewriter.cpp  BytecodeUseDef.h  ExecutableToCodeBlockEdge.cpp  ExitFlag.h  ICStatusUtils.h  MetadataTable.cpp  Opcode.h  PolyProtoAccessChain.cpp  StructureSet.cpp  UnlinkedMetadataTable.h
Source/JavaScriptCore/bytecompiler/: BytecodeGenerator.cpp  NodesCodegen.cpp
Source/JavaScriptCore/heap/: Heap.cpp  IsoAlignedMemoryAllocator.h  IsoSubspace.cpp  LocalAllocator.cpp  LocalAllocator.h  MachineStackMarker.cpp  MarkingConstraintSet.h  MarkingConstraintSolver.cpp  RegisterState.h
Source/JavaScriptCore/inspector/: EventLoop.cpp  JSGlobalObjectConsoleClient.cpp  ScriptArguments.cpp  ScriptArguments.h
Source/JavaScriptCore/inspector/remote/: EmptyRemoteInspector.cpp  EmptyRemoveInspactor.h  RemoteInspector.h
Source/JavaScriptCore/interpreter/: CallFrameInlines.h  Interpreter.cpp  InterpreterInlines.h  StackVisitor.cpp
Source/JavaScriptCore/llint/: LLIntCLoop.cpp  LLIntCLoop.h  LLIntData.cpp  LLIntEntrypoint.cpp  LLIntOfflineAsmConfig.h  LLIntOffsetsExtractor.cpp  LLIntThunks.cpp  LowLevelInterpreter.asm  LowLevelInterpreter.cpp
Source/JavaScriptCore/offlineasm_cloop/: asm.rb  ast.rb  backends.rb  cloop.rb  gen_cloop_asm.bat  offsets.rb  transform.rb
Source/JavaScriptCore/parser/: SourceProvider.h  SourceProviderCacheItem.h
Source/JavaScriptCore/runtime/: BigIntPrototype.cpp  CachedTypes.cpp  CodeCache.h  ConfigFile.h  ErrorType.cpp  GetPutInfo.h  IndexingType.cpp  JSExportMacros.h  JSGlobalObjectFunctions.cpp  JSImmutableButterfly.cpp  Options.cpp  PromiseDeferredTimer.cpp  RegExpCachedResult.h  RegExpGlobalData.cpp  StackFrame.cpp  StringPrototype.cpp  VM.cpp  VM.h  VMEntryScope.cpp  VMInlines.h
Source/JavaScriptCore/tools/: JSDollarVM.cpp  JSDollarVMPrototype.cpp
Source/JavaScriptCore/yarr/: YarrPattern.cpp
Source/POSIX_Win/pthreads/: BUILD.gn
Source/POSIX_Win/pthreads/src/: Makefile  ptw32_relmillisecs.c
Source/WTF/: BUILD.gn  config.h
Source/WTF/WTF.vcxproj/: WTF.proj
Source/WTF/wtf/: Assertions.h  Atomics.h  ByteOrder.h  Compiler.h  DateMath.cpp  DeprecatedOptional.h  ExportMacros.h  FastMalloc.cpp  GregorianDateTime.cpp  Lock.h  MathExtras.h  OSAllocatorWin.cpp  Platform.h  PlatformRegisters.h  RandomNumberSeed.h  StackBounds.cpp  StackBounds.h  StackPointer.cpp  StdLibExtras.h  ThreadSpecific.h  Threading.cpp  UUID.cpp
Source/WTF/wtf/JSC.js/: CPUTime.cpp  FileSystem.cpp  NumberOfCores.cpp  RAMSize.cpp  RandomDeviceGeneric.cpp  TextBreakIteratorInternalICU.cpp  ThreadMessage.cpp  ThreadingEmpty.cpp
Source/WTF/wtf/PORT/: AlignedMalloc_posix.cpp  AlignedMalloc_win.cpp  RAMSize.cpp  RandomDevice.cpp  StackBounds_em.cpp  StackBounds_win.cpp  ThreadingPthreads.cpp  gettimeofday.c  unistd.c
Source/WTF/wtf/dtoa/: utils.h
Source/WTF/wtf/generic/: RunLoopGeneric.cpp
Source/WTF/wtf/posix/: FileSystemPOSIX.cpp  ThreadingPOSIX.cpp
Source/WTF/wtf/unicode/: CollatorDefault.cpp
Source/WTF/wtf/win/: FileSystemWin.cpp  MainThreadWin.cpp
Source/icu/: BUILD.gn  common.vcxproj  i18n.vcxproj  ustr_wcs.cpp
Source/icu/unicode/: uconfig.h
Source/icu/x64/Release/: common.res
(+36 files in other folders)
