common_src = [
    "API/JSBase.cpp",
    "API/JSCTestRunnerUtils.cpp",
    "API/JSCallbackConstructor.cpp",
    "API/JSCallbackFunction.cpp",
    "API/JSCallbackObject.cpp",
    "API/JSClassRef.cpp",
    "API/JSContextRef.cpp",
    "API/JSObjectRef.cpp",
    "API/JSScriptRef.cpp",
    "API/JSStringRef.cpp",
    "API/JSTypedArray.cpp",
    "API/JSValueRef.cpp",
    "API/JSWeakObjectMapRefPrivate.cpp",
    "API/OpaqueJSString.cpp",
    "DerivedSources/JavaScriptCore/JSCBuiltins.cpp",
    "DerivedSources/JavaScriptCore/YarrCanonicalizeUnicode.cpp",
    "DerivedSources/JavaScriptCore/inspector/InspectorBackendDispatchers.cpp",
    "DerivedSources/JavaScriptCore/inspector/InspectorFrontendDispatchers.cpp",
    "DerivedSources/JavaScriptCore/inspector/InspectorProtocolObjects.cpp",
    "PORT/EventLoop.cpp",
    "assembler/MacroAssemblerCodeRef.cpp",
    "bindings/ScriptFunctionCall.cpp",
    "bindings/ScriptObject.cpp",
    "bindings/ScriptValue.cpp",
    "builtins/BuiltinExecutableCreator.cpp",
    "builtins/BuiltinExecutables.cpp",
    "bytecode/AccessCase.cpp",
    "bytecode/AdaptiveInferredPropertyValueWatchpointBase.cpp",
    "bytecode/ArithProfile.cpp",
    "bytecode/ArrayAllocationProfile.cpp",
    "bytecode/ArrayProfile.cpp",
    "bytecode/BytecodeBasicBlock.cpp",
    "bytecode/BytecodeDumper.cpp",
    "bytecode/BytecodeGeneratorification.cpp",
    "bytecode/BytecodeIntrinsicRegistry.cpp",
    "bytecode/BytecodeLivenessAnalysis.cpp",
    "bytecode/BytecodeRewriter.cpp",
    "bytecode/CallEdge.cpp",
    "bytecode/CallLinkInfo.cpp",
    "bytecode/CallLinkStatus.cpp",
    "bytecode/CallMode.cpp",
    "bytecode/CallVariant.cpp",
    "bytecode/CodeBlock.cpp",
    "bytecode/CodeBlockHash.cpp",
    "bytecode/CodeBlockJettisoningWatchpoint.cpp",
    "bytecode/CodeOrigin.cpp",
    "bytecode/CodeType.cpp",
    "bytecode/ComplexGetStatus.cpp",
    "bytecode/DFGExitProfile.cpp",
    "bytecode/DOMJITAccessCasePatchpointParams.cpp",
    "bytecode/DataFormat.cpp",
    "bytecode/DeferredCompilationCallback.cpp",
    "bytecode/DeferredSourceDump.cpp",
    "bytecode/DirectEvalCodeCache.cpp",
    "bytecode/EvalCodeBlock.cpp",
    "bytecode/ExecutionCounter.cpp",
    "bytecode/ExitKind.cpp",
    "bytecode/ExitingJITType.cpp",
    "bytecode/FullCodeOrigin.cpp",
    "bytecode/FunctionCodeBlock.cpp",
    "bytecode/GetByIdStatus.cpp",
    "bytecode/GetByIdVariant.cpp",
    "bytecode/GetterSetterAccessCase.cpp",
    "bytecode/InlineAccess.cpp",
    "bytecode/InlineCallFrame.cpp",
    "bytecode/InlineCallFrameSet.cpp",
    "bytecode/IntrinsicGetterAccessCase.cpp",
    "bytecode/JumpTable.cpp",
    "bytecode/LLIntPrototypeLoadAdaptiveStructureWatchpoint.cpp",
    "bytecode/LazyOperandValueProfile.cpp",
    "bytecode/MethodOfGettingAValueProfile.cpp",
    "bytecode/ModuleNamespaceAccessCase.cpp",
    "bytecode/ModuleProgramCodeBlock.cpp",
    "bytecode/ObjectPropertyCondition.cpp",
    "bytecode/ObjectPropertyConditionSet.cpp",
    "bytecode/Opcode.cpp",
    "bytecode/PolymorphicAccess.cpp",
    "bytecode/PreciseJumpTargets.cpp",
    "bytecode/ProgramCodeBlock.cpp",
    "bytecode/PropertyCondition.cpp",
    "bytecode/ProxyableAccessCase.cpp",
    "bytecode/PutByIdFlags.cpp",
    "bytecode/PutByIdStatus.cpp",
    "bytecode/PutByIdVariant.cpp",
    "bytecode/ReduceWhitespace.cpp",
    "bytecode/SpecialPointer.cpp",
    "bytecode/SpeculatedType.cpp",
    "bytecode/StructureSet.cpp",
    "bytecode/StructureStubClearingWatchpoint.cpp",
    "bytecode/StructureStubInfo.cpp",
    "bytecode/SuperSampler.cpp",
    "bytecode/ToThisStatus.cpp",
    "bytecode/TrackedReferences.cpp",
    "bytecode/UnlinkedCodeBlock.cpp",
    "bytecode/UnlinkedEvalCodeBlock.cpp",
    "bytecode/UnlinkedFunctionCodeBlock.cpp",
    "bytecode/UnlinkedFunctionExecutable.cpp",
    "bytecode/UnlinkedInstructionStream.cpp",
    "bytecode/UnlinkedModuleProgramCodeBlock.cpp",
    "bytecode/UnlinkedProgramCodeBlock.cpp",
    "bytecode/ValueRecovery.cpp",
    "bytecode/VariableWriteFireDetail.cpp",
    "bytecode/VirtualRegister.cpp",
    "bytecode/Watchpoint.cpp",
    "bytecompiler/BytecodeGenerator.cpp",
    "bytecompiler/NodesCodegen.cpp",
    "debugger/Debugger.cpp",
    "debugger/DebuggerCallFrame.cpp",
    "debugger/DebuggerLocation.cpp",
    "debugger/DebuggerParseData.cpp",
    "debugger/DebuggerScope.cpp",
    "dfg/DFGCapabilities.cpp",
    "dfg/DFGCommon.cpp",
    "dfg/DFGCompilationKey.cpp",
    "dfg/DFGCompilationMode.cpp",
    "dfg/DFGDesiredTransitions.cpp",
    "dfg/DFGDesiredWeakReferences.cpp",
    "dfg/DFGDriver.cpp",
    "dfg/DFGOSREntry.cpp",
    "dfg/DFGOSRExitFuzz.cpp",
    "dfg/DFGOperations.cpp",
    "dfg/DFGPlan.cpp",
    "dfg/DFGWorklist.cpp",
    "disassembler/Disassembler.cpp",
    "heap/AllocatorAttributes.cpp",
    "heap/CellContainer.cpp",
    "heap/CodeBlockSet.cpp",
    "heap/CollectionScope.cpp",
    "heap/CollectorPhase.cpp",
    "heap/ConservativeRoots.cpp",
    "heap/DeferGC.cpp",
    "heap/DestructionMode.cpp",
    "heap/EdenGCActivityCallback.cpp",
    "heap/FreeList.cpp",
    "heap/FullGCActivityCallback.cpp",
    "heap/GCActivityCallback.cpp",
    "heap/GCConductor.cpp",
    "heap/GCLogging.cpp",
    "heap/HandleSet.cpp",
    "heap/HandleStack.cpp",
    "heap/Heap.cpp",
    "heap/HeapCell.cpp",
    "heap/HeapHelperPool.cpp",
    "heap/HeapProfiler.cpp",
    "heap/HeapSnapshot.cpp",
    "heap/HeapSnapshotBuilder.cpp",
    "heap/IncrementalSweeper.cpp",
    "heap/JITStubRoutineSet.cpp",
    "heap/LargeAllocation.cpp",
    "heap/MachineStackMarker.cpp",
    "heap/MarkStack.cpp",
    "heap/MarkedAllocator.cpp",
    "heap/MarkedBlock.cpp",
    "heap/MarkedSpace.cpp",
    "heap/MarkingConstraint.cpp",
    "heap/MarkingConstraintSet.cpp",
    "heap/MutatorScheduler.cpp",
    "heap/MutatorState.cpp",
    "heap/SlotVisitor.cpp",
    "heap/SpaceTimeMutatorScheduler.cpp",
    "heap/StochasticSpaceTimeMutatorScheduler.cpp",
    "heap/StopIfNecessaryTimer.cpp",
    "heap/Subspace.cpp",
    "heap/SynchronousStopTheWorldMutatorScheduler.cpp",
    "heap/VisitRaceKey.cpp",
    "heap/Weak.cpp",
    "heap/WeakBlock.cpp",
    "heap/WeakHandleOwner.cpp",
    "heap/WeakSet.cpp",
    "heap/WriteBarrierSupport.cpp",
    "inspector/AsyncStackTrace.cpp",
    "inspector/ConsoleMessage.cpp",
    "inspector/ContentSearchUtilities.cpp",
    "inspector/IdentifiersFactory.cpp",
    "inspector/InjectedScript.cpp",
    "inspector/InjectedScriptBase.cpp",
    "inspector/InjectedScriptHost.cpp",
    "inspector/InjectedScriptManager.cpp",
    "inspector/InjectedScriptModule.cpp",
    "inspector/InspectorAgentRegistry.cpp",
    "inspector/InspectorBackendDispatcher.cpp",
    "inspector/InspectorFrontendRouter.cpp",
    "inspector/InspectorValues.cpp",
    "inspector/JSGlobalObjectConsoleClient.cpp",
    "inspector/JSGlobalObjectInspectorController.cpp",
    "inspector/JSGlobalObjectScriptDebugServer.cpp",
    "inspector/JSInjectedScriptHost.cpp",
    "inspector/JSInjectedScriptHostPrototype.cpp",
    "inspector/JSJavaScriptCallFrame.cpp",
    "inspector/JSJavaScriptCallFramePrototype.cpp",
    "inspector/JavaScriptCallFrame.cpp",
    "inspector/PerGlobalObjectWrapperWorld.cpp",
    "inspector/ScriptArguments.cpp",
    "inspector/ScriptCallFrame.cpp",
    "inspector/ScriptCallStack.cpp",
    "inspector/ScriptCallStackFactory.cpp",
    "inspector/ScriptDebugServer.cpp",
    "inspector/agents/InspectorAgent.cpp",
    "inspector/agents/InspectorConsoleAgent.cpp",
    "inspector/agents/InspectorDebuggerAgent.cpp",
    "inspector/agents/InspectorHeapAgent.cpp",
    "inspector/agents/InspectorRuntimeAgent.cpp",
    "inspector/agents/InspectorScriptProfilerAgent.cpp",
    "inspector/agents/JSGlobalObjectConsoleAgent.cpp",
    "inspector/agents/JSGlobalObjectDebuggerAgent.cpp",
    "inspector/agents/JSGlobalObjectRuntimeAgent.cpp",
    "inspector/remote/EmptyRemoteInspector.cpp",
    "inspector/remote/RemoteAutomationTarget.cpp",
    "inspector/remote/RemoteControllableTarget.cpp",
    "inspector/remote/RemoteInspectionTarget.cpp",
    "inspector/remote/RemoteInspector.cpp",
    "interpreter/AbstractPC.cpp",
    "interpreter/CLoopStack.cpp",
    "interpreter/CallFrame.cpp",
    "interpreter/Interpreter.cpp",
    "interpreter/ProtoCallFrame.cpp",
    "interpreter/ShadowChicken.cpp",
    "interpreter/StackVisitor.cpp",
    "jit/ExecutableAllocationFuzz.cpp",
    "jit/ICStats.cpp",
    "jit/JITCode.cpp",
    "jit/JITExceptions.cpp",
    "jit/TagRegistersMode.cpp",
    "jsc.cpp",
    "llint/LLIntCLoop.cpp",
    "llint/LLIntData.cpp",
    "llint/LLIntEntrypoint.cpp",
    "llint/LLIntExceptions.cpp",
    "llint/LLIntSlowPaths.cpp",
    "llint/LLIntThunks.cpp",
    "llint/LowLevelInterpreter.cpp",
    "parser/Lexer.cpp",
    "parser/ModuleAnalyzer.cpp",
    "parser/Nodes.cpp",
    "parser/NodesAnalyzeModule.cpp",
    "parser/Parser.cpp",
    "parser/ParserArena.cpp",
    "parser/SourceProvider.cpp",
    "parser/SourceProviderCache.cpp",
    "parser/UnlinkedSourceCode.cpp",
    "parser/VariableEnvironment.cpp",
    "profiler/ProfilerBytecode.cpp",
    "profiler/ProfilerBytecodeSequence.cpp",
    "profiler/ProfilerBytecodes.cpp",
    "profiler/ProfilerCompilation.cpp",
    "profiler/ProfilerCompilationKind.cpp",
    "profiler/ProfilerCompiledBytecode.cpp",
    "profiler/ProfilerDatabase.cpp",
    "profiler/ProfilerEvent.cpp",
    "profiler/ProfilerJettisonReason.cpp",
    "profiler/ProfilerOSRExit.cpp",
    "profiler/ProfilerOSRExitSite.cpp",
    "profiler/ProfilerOrigin.cpp",
    "profiler/ProfilerOriginStack.cpp",
    "profiler/ProfilerProfiledBytecodes.cpp",
    "profiler/ProfilerUID.cpp",
    "runtime/AbstractModuleRecord.cpp",
    "runtime/ArgList.cpp",
    "runtime/ArrayBuffer.cpp",
    "runtime/ArrayBufferNeuteringWatchpoint.cpp",
    "runtime/ArrayBufferView.cpp",
    "runtime/ArrayConstructor.cpp",
    "runtime/ArrayConventions.cpp",
    "runtime/ArrayIteratorAdaptiveWatchpoint.cpp",
    "runtime/ArrayIteratorPrototype.cpp",
    "runtime/ArrayPrototype.cpp",
    "runtime/AsyncFunctionConstructor.cpp",
    "runtime/AsyncFunctionPrototype.cpp",
    "runtime/AtomicsObject.cpp",
    "runtime/BasicBlockLocation.cpp",
    "runtime/BooleanConstructor.cpp",
    "runtime/BooleanObject.cpp",
    "runtime/BooleanPrototype.cpp",
    "runtime/CallData.cpp",
    "runtime/CatchScope.cpp",
    "runtime/ClonedArguments.cpp",
    "runtime/CodeCache.cpp",
    "runtime/CodeSpecializationKind.cpp",
    "runtime/CommonIdentifiers.cpp",
    "runtime/CommonSlowPaths.cpp",
    "runtime/CommonSlowPathsExceptions.cpp",
    "runtime/CompilationResult.cpp",
    "runtime/Completion.cpp",
    "runtime/ConsoleClient.cpp",
    "runtime/ConsoleObject.cpp",
    "runtime/ConstantMode.cpp",
    "runtime/ConstructData.cpp",
    "runtime/ControlFlowProfiler.cpp",
    "runtime/CustomGetterSetter.cpp",
    "runtime/DataView.cpp",
    "runtime/DateConstructor.cpp",
    "runtime/DateConversion.cpp",
    "runtime/DateInstance.cpp",
    "runtime/DatePrototype.cpp",
    "runtime/DirectArguments.cpp",
    "runtime/DirectArgumentsOffset.cpp",
    "runtime/DirectEvalExecutable.cpp",
    "runtime/DumpContext.cpp",
    "runtime/ECMAScriptSpecInternalFunctions.cpp",
    "runtime/Error.cpp",
    "runtime/ErrorConstructor.cpp",
    "runtime/ErrorHandlingScope.cpp",
    "runtime/ErrorInstance.cpp",
    "runtime/ErrorPrototype.cpp",
    "runtime/EvalExecutable.cpp",
    "runtime/Exception.cpp",
    "runtime/ExceptionEventLocation.cpp",
    "runtime/ExceptionFuzz.cpp",
    "runtime/ExceptionHelpers.cpp",
    "runtime/ExceptionScope.cpp",
    "runtime/ExecutableBase.cpp",
    "runtime/FunctionConstructor.cpp",
    "runtime/FunctionExecutable.cpp",
    "runtime/FunctionExecutableDump.cpp",
    "runtime/FunctionHasExecutedCache.cpp",
    "runtime/FunctionPrototype.cpp",
    "runtime/FunctionRareData.cpp",
    "runtime/GeneratorFunctionConstructor.cpp",
    "runtime/GeneratorFunctionPrototype.cpp",
    "runtime/GeneratorPrototype.cpp",
    "runtime/GetterSetter.cpp",
    "runtime/HashMapImpl.cpp",
    "runtime/Identifier.cpp",
    "runtime/IndexingType.cpp",
    "runtime/IndirectEvalExecutable.cpp",
    "runtime/InferredType.cpp",
    "runtime/InferredTypeTable.cpp",
    "runtime/InferredValue.cpp",
    "runtime/InitializeThreading.cpp",
    "runtime/InspectorInstrumentationObject.cpp",
    "runtime/InternalFunction.cpp",
    "runtime/IntlCollator.cpp",
    "runtime/IntlCollatorConstructor.cpp",
    "runtime/IntlCollatorPrototype.cpp",
    "runtime/IntlDateTimeFormat.cpp",
    "runtime/IntlDateTimeFormatConstructor.cpp",
    "runtime/IntlDateTimeFormatPrototype.cpp",
    "runtime/IntlNumberFormat.cpp",
    "runtime/IntlNumberFormatConstructor.cpp",
    "runtime/IntlNumberFormatPrototype.cpp",
    "runtime/IntlObject.cpp",
    "runtime/IteratorOperations.cpp",
    "runtime/IteratorPrototype.cpp",
    "runtime/JSAPIValueWrapper.cpp",
    "runtime/JSArray.cpp",
    "runtime/JSArrayBuffer.cpp",
    "runtime/JSArrayBufferConstructor.cpp",
    "runtime/JSArrayBufferPrototype.cpp",
    "runtime/JSArrayBufferView.cpp",
    "runtime/JSAsyncFunction.cpp",
    "runtime/JSBoundFunction.cpp",
    "runtime/JSCJSValue.cpp",
    "runtime/JSCallee.cpp",
    "runtime/JSCell.cpp",
    "runtime/JSCustomGetterSetterFunction.cpp",
    "runtime/JSDataView.cpp",
    "runtime/JSDataViewPrototype.cpp",
    "runtime/JSDateMath.cpp",
    "runtime/JSDestructibleObjectSubspace.cpp",
    "runtime/JSEnvironmentRecord.cpp",
    "runtime/JSFixedArray.cpp",
    "runtime/JSFunction.cpp",
    "runtime/JSGeneratorFunction.cpp",
    "runtime/JSGlobalLexicalEnvironment.cpp",
    "runtime/JSGlobalObject.cpp",
    "runtime/JSGlobalObjectDebuggable.cpp",
    "runtime/JSGlobalObjectFunctions.cpp",
    "runtime/JSInternalPromise.cpp",
    "runtime/JSInternalPromiseConstructor.cpp",
    "runtime/JSInternalPromiseDeferred.cpp",
    "runtime/JSInternalPromisePrototype.cpp",
    "runtime/JSJob.cpp",
    "runtime/JSLexicalEnvironment.cpp",
    "runtime/JSLock.cpp",
    "runtime/JSMap.cpp",
    "runtime/JSMapIterator.cpp",
    "runtime/JSModuleEnvironment.cpp",
    "runtime/JSModuleLoader.cpp",
    "runtime/JSModuleNamespaceObject.cpp",
    "runtime/JSModuleRecord.cpp",
    "runtime/JSNativeStdFunction.cpp",
    "runtime/JSONObject.cpp",
    "runtime/JSObject.cpp",
    "runtime/JSPromise.cpp",
    "runtime/JSPromiseConstructor.cpp",
    "runtime/JSPromiseDeferred.cpp",
    "runtime/JSPromisePrototype.cpp",
    "runtime/JSPropertyNameEnumerator.cpp",
    "runtime/JSPropertyNameIterator.cpp",
    "runtime/JSProxy.cpp",
    "runtime/JSRunLoopTimer.cpp",
    "runtime/JSScope.cpp",
    "runtime/JSScriptFetcher.cpp",
    "runtime/JSSegmentedVariableObject.cpp",
    "runtime/JSSegmentedVariableObjectSubspace.cpp",
    "runtime/JSSet.cpp",
    "runtime/JSSetIterator.cpp",
    "runtime/JSSourceCode.cpp",
    "runtime/JSString.cpp",
    "runtime/JSStringIterator.cpp",
    "runtime/JSStringJoiner.cpp",
    "runtime/JSStringSubspace.cpp",
    "runtime/JSSymbolTableObject.cpp",
    "runtime/JSTemplateRegistryKey.cpp",
    "runtime/JSTypedArrayConstructors.cpp",
    "runtime/JSTypedArrayPrototypes.cpp",
    "runtime/JSTypedArrayViewConstructor.cpp",
    "runtime/JSTypedArrayViewPrototype.cpp",
    "runtime/JSTypedArrays.cpp",
    "runtime/JSWeakMap.cpp",
    "runtime/JSWeakSet.cpp",
    "runtime/JSWithScope.cpp",
    "runtime/JSWrapperObject.cpp",
    "runtime/LazyClassStructure.cpp",
    "runtime/LiteralParser.cpp",
    "runtime/Lookup.cpp",
    "runtime/MapBase.cpp",
    "runtime/MapConstructor.cpp",
    "runtime/MapIteratorPrototype.cpp",
    "runtime/MapPrototype.cpp",
    "runtime/MatchResult.cpp",
    "runtime/MathCommon.cpp",
    "runtime/MathObject.cpp",
    "runtime/MemoryStatistics.cpp",
    "runtime/ModuleLoaderPrototype.cpp",
    "runtime/ModuleProgramExecutable.cpp",
    "runtime/NativeErrorConstructor.cpp",
    "runtime/NativeErrorPrototype.cpp",
    "runtime/NativeExecutable.cpp",
    "runtime/NativeStdFunctionCell.cpp",
    "runtime/NullGetterFunction.cpp",
    "runtime/NullSetterFunction.cpp",
    "runtime/NumberConstructor.cpp",
    "runtime/NumberObject.cpp",
    "runtime/NumberPrototype.cpp",
    "runtime/ObjectConstructor.cpp",
    "runtime/ObjectPrototype.cpp",
    "runtime/Operations.cpp",
    "runtime/Options.cpp",
    "runtime/ProgramExecutable.cpp",
    "runtime/PromiseDeferredTimer.cpp",
    "runtime/PropertyDescriptor.cpp",
    "runtime/PropertySlot.cpp",
    "runtime/PropertyTable.cpp",
    "runtime/PrototypeMap.cpp",
    "runtime/ProxyConstructor.cpp",
    "runtime/ProxyObject.cpp",
    "runtime/ProxyRevoke.cpp",
    "runtime/ReflectObject.cpp",
    "runtime/RegExp.cpp",
    "runtime/RegExpCache.cpp",
    "runtime/RegExpCachedResult.cpp",
    "runtime/RegExpConstructor.cpp",
    "runtime/RegExpMatchesArray.cpp",
    "runtime/RegExpObject.cpp",
    "runtime/RegExpPrototype.cpp",
    "runtime/RuntimeType.cpp",
    "runtime/SamplingCounter.cpp",
    "runtime/SamplingProfiler.cpp",
    "runtime/ScopeOffset.cpp",
    "runtime/ScopedArguments.cpp",
    "runtime/ScopedArgumentsTable.cpp",
    "runtime/ScriptExecutable.cpp",
    "runtime/SetConstructor.cpp",
    "runtime/SetIteratorPrototype.cpp",
    "runtime/SetPrototype.cpp",
    "runtime/SimpleTypedArrayController.cpp",
    "runtime/SmallStrings.cpp",
    "runtime/SparseArrayValueMap.cpp",
    "runtime/StackFrame.cpp",
    "runtime/StrictEvalActivation.cpp",
    "runtime/StringConstructor.cpp",
    "runtime/StringIteratorPrototype.cpp",
    "runtime/StringObject.cpp",
    "runtime/StringPrototype.cpp",
    "runtime/StringRecursionChecker.cpp",
    "runtime/Structure.cpp",
    "runtime/StructureChain.cpp",
    "runtime/StructureIDTable.cpp",
    "runtime/StructureRareData.cpp",
    "runtime/Symbol.cpp",
    "runtime/SymbolConstructor.cpp",
    "runtime/SymbolObject.cpp",
    "runtime/SymbolPrototype.cpp",
    "runtime/SymbolTable.cpp",
    "runtime/TemplateRegistry.cpp",
    "runtime/TemplateRegistryKey.cpp",
    "runtime/TemplateRegistryKeyTable.cpp",
    "runtime/TestRunnerUtils.cpp",
    "runtime/ThrowScope.cpp",
    "runtime/TypeLocationCache.cpp",
    "runtime/TypeProfiler.cpp",
    "runtime/TypeProfilerLog.cpp",
    "runtime/TypeSet.cpp",
    "runtime/TypedArrayController.cpp",
    "runtime/TypedArrayType.cpp",
    "runtime/TypeofType.cpp",
    "runtime/VM.cpp",
    "runtime/VMEntryScope.cpp",
    "runtime/VMTraps.cpp",
    "runtime/VarOffset.cpp",
    "runtime/Watchdog.cpp",
    "runtime/WeakMapConstructor.cpp",
    "runtime/WeakMapData.cpp",
    "runtime/WeakMapPrototype.cpp",
    "runtime/WeakSetConstructor.cpp",
    "runtime/WeakSetPrototype.cpp",
    "tools/CellList.cpp",
    "tools/CodeProfile.cpp",
    "tools/CodeProfiling.cpp",
    "tools/FunctionOverrides.cpp",
    "tools/FunctionWhitelist.cpp",
    "tools/HeapVerifier.cpp",
    "tools/JSDollarVM.cpp",
    "tools/JSDollarVMPrototype.cpp",
    "tools/SigillCrashAnalyzer.cpp",
    "tools/StackTrace.cpp",
    "tools/VMInspector.cpp",
    "yarr/RegularExpression.cpp",
    "yarr/YarrCanonicalizeUCS2.cpp",
    "yarr/YarrInterpreter.cpp",
    "yarr/YarrJIT.cpp",
    "yarr/YarrPattern.cpp",
    "yarr/YarrSyntaxChecker.cpp",
]

common_deps = [
    "//Source/icu:icu",
    "//Source/global_headers:global_headers",
    "//Source/WTF:wtf",
]

config("jsc_config") {
    defines = [
        "BUILDING_JavaScriptCore",
    ]
    include_dirs = [
        ".",
        "API",
        "DerivedSources",
        "DerivedSources/JavaScriptCore",
        "DerivedSources/JavaScriptCore/inspector",
        "ForwardingHeaders",
        "assembler",
        "bindings",
        "builtins",
        "bytecode",
        "bytecompiler",
        "debugger",
        "dfg",
        "disassembler",
        "domjit",
        "ftl",
        "heap",
        "inspector",
        "inspector/agents",
        "inspector/remote",
        "interpreter",
        "jit",
        "llint",
        "offlineasm_cloop",
        "parser",
        "profiler",
        "runtime",
        "tools",
        "wasm",
        "wasm/js",
        "yarr",
    ]
}

if (target_os == "wasm") {
    executable("jsc") {
        sources = common_src
        configs += [
            ":jsc_config",
        ]
        deps = common_deps
    }
}

if (target_os == "win") {
    executable("jsc") {
        sources = common_src
        configs += [
            ":jsc_config",
        ]
        cflags = [
            "/wd4018",
            "/wd4068",
            "/wd4146",
            "/wd4244",
            "/wd4251",
            "/wd4275",
            "/wd4291",
            "/wd4309",
            "/wd4396",
            "/wd4646",
            "/wd4819",
            "/wd4996",
        ]
        defines = [
            "NOMINMAX",
        ]
        deps = common_deps + [
            "//Source/POSIX_Win:posix_win",
            "//Source/POSIX_Win/pthreads:pthreads",
        ]
        libs = [
            "Advapi32.lib",
        ]
    }
}

