static_library("wtf") {
    sources = [
        "wtf/Assertions.cpp",
        "wtf/Atomics.cpp",
        "wtf/AutomaticThread.cpp",
        "wtf/BitVector.cpp",
        "wtf/ClockType.cpp",
        "wtf/CompilationThread.cpp",
        "wtf/CrossThreadCopier.cpp",
        "wtf/CryptographicUtilities.cpp",
        "wtf/CryptographicallyRandomNumber.cpp",
        "wtf/CurrentTime.cpp",
        "wtf/DataLog.cpp",
        "wtf/DateMath.cpp",
        "wtf/DecimalNumber.cpp",
        "wtf/FastBitVector.cpp",
        "wtf/FastMalloc.cpp",
        "wtf/FilePrintStream.cpp",
        "wtf/FunctionDispatcher.cpp",
        "wtf/GlobalVersion.cpp",
        "wtf/GregorianDateTime.cpp",
        "wtf/HashTable.cpp",
        "wtf/Lock.cpp",
        "wtf/LockedPrintStream.cpp",
        "wtf/MD5.cpp",
        "wtf/MainThread.cpp",
        "wtf/MediaTime.cpp",
        "wtf/MemoryFootprint.cpp",
        "wtf/MemoryPressureHandler.cpp",
        "wtf/MetaAllocator.cpp",
        "wtf/MonotonicTime.cpp",
        "wtf/NumberOfCores.cpp",
        "wtf/OSAllocatorPosix.cpp",
        "wtf/OSRandomSource.cpp",
        "wtf/PORT/AlignedMalloc_posix.cpp",
        "wtf/PORT/RAMSize.cpp",
        "wtf/PORT/RandomDevice.cpp",
        "wtf/PORT/StackBounds_em.cpp",
        "wtf/PORT/TextBreakIteratorInternalICU_posix.cpp",
        "wtf/PORT/ThreadingPthreads.cpp",
        "wtf/PageBlock.cpp",
        "wtf/ParallelHelperPool.cpp",
        "wtf/ParallelJobsGeneric.cpp",
        "wtf/ParkingLot.cpp",
        "wtf/PlatformUserPreferredLanguagesUnix.cpp",
        "wtf/PrintStream.cpp",
        "wtf/RandomNumber.cpp",
        "wtf/RefCountedLeakCounter.cpp",
        "wtf/RunLoop.cpp",
        "wtf/SHA1.cpp",
        "wtf/Seconds.cpp",
        "wtf/SixCharacterHash.cpp",
        "wtf/SizeLimits.cpp",
        "wtf/StackStats.cpp",
        "wtf/StringPrintStream.cpp",
        "wtf/ThreadHolder.cpp",
        "wtf/ThreadHolderPthreads.cpp",
        "wtf/Threading.cpp",
        "wtf/TimeWithDynamicClockType.cpp",
        "wtf/WTFThreadData.cpp",
        "wtf/WallTime.cpp",
        "wtf/WordLock.cpp",
        "wtf/WorkQueue.cpp",
        "wtf/dtoa.cpp",
        "wtf/dtoa/bignum-dtoa.cc",
        "wtf/dtoa/bignum.cc",
        "wtf/dtoa/cached-powers.cc",
        "wtf/dtoa/diy-fp.cc",
        "wtf/dtoa/double-conversion.cc",
        "wtf/dtoa/fast-dtoa.cc",
        "wtf/dtoa/fixed-dtoa.cc",
        "wtf/dtoa/strtod.cc",
        "wtf/generic/MainThreadGeneric.cpp",
        "wtf/generic/RunLoopGeneric.cpp",
        "wtf/generic/WorkQueueGeneric.cpp",
        "wtf/text/AtomicString.cpp",
        "wtf/text/AtomicStringImpl.cpp",
        "wtf/text/AtomicStringTable.cpp",
        "wtf/text/Base64.cpp",
        "wtf/text/CString.cpp",
        "wtf/text/StringBuilder.cpp",
        "wtf/text/StringImpl.cpp",
        "wtf/text/StringStatics.cpp",
        "wtf/text/StringView.cpp",
        "wtf/text/SymbolImpl.cpp",
        "wtf/text/SymbolRegistry.cpp",
        "wtf/text/TextBreakIterator.cpp",
        "wtf/text/WTFString.cpp",
        "wtf/text/icu/UTextProvider.cpp",
        "wtf/text/icu/UTextProviderLatin1.cpp",
        "wtf/text/icu/UTextProviderUTF16.cpp",
        "wtf/threads/BinarySemaphore.cpp",
        "wtf/unicode/UTF8.cpp",
        "wtf/unicode/icu/CollatorICU.cpp",
    ]
    configs += [
        ":wtf_config",
        ":wtf_include",
    ]
    public_configs = [
        ":wtf_include",
    ]
    deps = [
        "//Source/icu:icu",
        "//Source/global_headers",
    ]
}

config("wtf_config") {
    defines = [
        "BUILDING_WTF",
    ]
    include_dirs = [
    ]
}

config("wtf_include") {
    include_dirs = [
        ".",
        "wtf",
        "wtf/text",
        "wtf/text/icu",
    ]
}