static_library("icu") {
    sources = [
        "cmemory.c",
        "cstring.c",
        "cwchar.c",
        "decContext.c",
        "decNumber.c",
        "icudataver.c",
        "locmap.c",
        "propsvec.c",
        "uarrsort.c",
        "ubidi.c",
        "ubidiln.c",
        "ubidiwrt.c",
        "ubidi_props.c",
        "ucat.c",
        "uchar.c",
        "ucmndata.c",
        "ucnv.c",
        "ucnvdisp.c",
        "ucnvhz.c",
        "ucnvisci.c",
        "ucnvlat1.c",
        "ucnvscsu.c",
        "ucnv_cb.c",
        "ucnv_cnv.c",
        "ucnv_ct.c",
        "ucnv_err.c",
        "ucnv_lmb.c",
        "ucnv_set.c",
        "ucnv_u16.c",
        "ucnv_u32.c",
        "ucnv_u7.c",
        "ucnv_u8.c",
        "udatamem.c",
        "udataswp.c",
        "uenum.c",
        "uhash.c",
        "uinvchar.c",
        "ulist.c",
        "ulocdata.c",
        "uloc_tag.c",
        "umapfile.c",
        "umath.c",
        "uresdata.c",
        "ures_cnv.c",
        "uscript.c",
        "usc_impl.c",
        "ustrfmt.c",
        "utf_impl.c",
        "utmscale.c",
        "utrace.c",
        "utypes.c",
        "wintz.c",
        "stubdata.c",
        "affixpatternparser.cpp",
        "alphaindex.cpp",
        "anytrans.cpp",
        "appendable.cpp",
        "astro.cpp",
        "basictz.cpp",
        "bmpset.cpp",
        "bocsu.cpp",
        "brkeng.cpp",
        "brkiter.cpp",
        "brktrans.cpp",
        "buddhcal.cpp",
        "bytestream.cpp",
        "bytestrie.cpp",
        "bytestriebuilder.cpp",
        "bytestrieiterator.cpp",
        "calendar.cpp",
        "caniter.cpp",
        "casetrn.cpp",
        "cecal.cpp",
        "chariter.cpp",
        "charstr.cpp",
        "chnsecal.cpp",
        "choicfmt.cpp",
        "coleitr.cpp",
        "coll.cpp",
        "collation.cpp",
        "collationbuilder.cpp",
        "collationcompare.cpp",
        "collationdata.cpp",
        "collationdatabuilder.cpp",
        "collationdatareader.cpp",
        "collationdatawriter.cpp",
        "collationfastlatin.cpp",
        "collationfastlatinbuilder.cpp",
        "collationfcd.cpp",
        "collationiterator.cpp",
        "collationkeys.cpp",
        "collationroot.cpp",
        "collationrootelements.cpp",
        "collationruleparser.cpp",
        "collationsets.cpp",
        "collationsettings.cpp",
        "collationtailoring.cpp",
        "collationweights.cpp",
        "compactdecimalformat.cpp",
        "coptccal.cpp",
        "cpdtrans.cpp",
        "csdetect.cpp",
        "csmatch.cpp",
        "csr2022.cpp",
        "csrecog.cpp",
        "csrmbcs.cpp",
        "csrsbcs.cpp",
        "csrucode.cpp",
        "csrutf8.cpp",
        "curramt.cpp",
        "currfmt.cpp",
        "currpinf.cpp",
        "currunit.cpp",
        "dangical.cpp",
        "datefmt.cpp",
        "dcfmtsym.cpp",
        "decfmtst.cpp",
        "decimalformatpattern.cpp",
        "decimfmt.cpp",
        "decimfmtimpl.cpp",
        "dictbe.cpp",
        "dictionarydata.cpp",
        "digitaffix.cpp",
        "digitaffixesandpadding.cpp",
        "digitformatter.cpp",
        "digitgrouping.cpp",
        "digitinterval.cpp",
        "digitlst.cpp",
        "dtfmtsym.cpp",
        "dtintrv.cpp",
        "dtitvfmt.cpp",
        "dtitvinf.cpp",
        "dtptngen.cpp",
        "dtrule.cpp",
        "errorcode.cpp",
        "esctrn.cpp",
        "ethpccal.cpp",
        "filteredbrk.cpp",
        "filterednormalizer2.cpp",
        "fmtable.cpp",
        "fmtable_cnv.cpp",
        "format.cpp",
        "fphdlimp.cpp",
        "fpositer.cpp",
        "funcrepl.cpp",
        "gender.cpp",
        "gregocal.cpp",
        "gregoimp.cpp",
        "hebrwcal.cpp",
        "icuplug.cpp",
        "identifier_info.cpp",
        "indiancal.cpp",
        "inputext.cpp",
        "islamcal.cpp",
        "japancal.cpp",
        "listformatter.cpp",
        "loadednormalizer2impl.cpp",
        "locavailable.cpp",
        "locbased.cpp",
        "locdispnames.cpp",
        "locdspnm.cpp",
        "locid.cpp",
        "loclikely.cpp",
        "locresdata.cpp",
        "locutil.cpp",
        "measfmt.cpp",
        "measunit.cpp",
        "measure.cpp",
        "messagepattern.cpp",
        "msgfmt.cpp",
        "name2uni.cpp",
        "nfrs.cpp",
        "nfrule.cpp",
        "nfsubs.cpp",
        "normalizer2.cpp",
        "normalizer2impl.cpp",
        "normlzr.cpp",
        "nortrans.cpp",
        "nultrans.cpp",
        "numfmt.cpp",
        "numsys.cpp",
        "olsontz.cpp",
        "parsepos.cpp",
        "patternprops.cpp",
        "persncal.cpp",
        "pluralaffix.cpp",
        "pluralmap.cpp",
        "plurfmt.cpp",
        "plurrule.cpp",
        "precision.cpp",
        "propname.cpp",
        "punycode.cpp",
        "putil.cpp",
        "quant.cpp",
        "quantityformatter.cpp",
        "rbbi.cpp",
        "rbbidata.cpp",
        "rbbinode.cpp",
        "rbbirb.cpp",
        "rbbiscan.cpp",
        "rbbisetb.cpp",
        "rbbistbl.cpp",
        "rbbitblb.cpp",
        "rbnf.cpp",
        "rbt.cpp",
        "rbtz.cpp",
        "rbt_data.cpp",
        "rbt_pars.cpp",
        "rbt_rule.cpp",
        "rbt_set.cpp",
        "regexcmp.cpp",
        "regeximp.cpp",
        "regexst.cpp",
        "regextxt.cpp",
        "region.cpp",
        "reldatefmt.cpp",
        "reldtfmt.cpp",
        "rematch.cpp",
        "remtrans.cpp",
        "repattrn.cpp",
        "resbund.cpp",
        "resbund_cnv.cpp",
        "rulebasedcollator.cpp",
        "ruleiter.cpp",
        "schriter.cpp",
        "scientificnumberformatter.cpp",
        "scriptset.cpp",
        "search.cpp",
        "selfmt.cpp",
        "serv.cpp",
        "servlk.cpp",
        "servlkf.cpp",
        "servls.cpp",
        "servnotf.cpp",
        "servrbf.cpp",
        "servslkf.cpp",
        "sharedbreakiterator.cpp",
        "sharedobject.cpp",
        "simplepatternformatter.cpp",
        "simpletz.cpp",
        "smallintformatter.cpp",
        "smpdtfmt.cpp",
        "smpdtfst.cpp",
        "sortkey.cpp",
        "stringpiece.cpp",
        "stringtriebuilder.cpp",
        "strmatch.cpp",
        "strrepl.cpp",
        "stsearch.cpp",
        "taiwncal.cpp",
        "timezone.cpp",
        "titletrn.cpp",
        "tmunit.cpp",
        "tmutamt.cpp",
        "tmutfmt.cpp",
        "tolowtrn.cpp",
        "toupptrn.cpp",
        "translit.cpp",
        "transreg.cpp",
        "tridpars.cpp",
        "tzfmt.cpp",
        "tzgnames.cpp",
        "tznames.cpp",
        "tznames_impl.cpp",
        "tzrule.cpp",
        "tztrans.cpp",
        "ubrk.cpp",
        "ucal.cpp",
        "ucase.cpp",
        "ucasemap.cpp",
        "ucasemap_titlecase_brkiter.cpp",
        "ucharstrie.cpp",
        "ucharstriebuilder.cpp",
        "ucharstrieiterator.cpp",
        "uchriter.cpp",
        "ucln_cmn.cpp",
        "ucln_in.cpp",
        "ucnv2022.cpp",
        "ucnvbocu.cpp",
        "ucnvmbcs.cpp",
        "ucnvsel.cpp",
        "ucnv_bld.cpp",
        "ucnv_ext.cpp",
        "ucnv_io.cpp",
        "ucol.cpp",
        "ucoleitr.cpp",
        "ucol_res.cpp",
        "ucol_sit.cpp",
        "ucol_swp.cpp",
        "ucsdet.cpp",
        "ucurr.cpp",
        "udat.cpp",
        "udata.cpp",
        "udateintervalformat.cpp",
        "udatpg.cpp",
        "ufieldpositer.cpp",
        "uhash_us.cpp",
        "uidna.cpp",
        "uinit.cpp",
        "uiter.cpp",
        "uitercollationiterator.cpp",
        "ulistformatter.cpp",
        "uloc.cpp",
        "uloc_keytype.cpp",
        "umsg.cpp",
        "umutex.cpp",
        "unames.cpp",
        "unesctrn.cpp",
        "uni2name.cpp",
        "unifiedcache.cpp",
        "unifilt.cpp",
        "unifunct.cpp",
        "uniset.cpp",
        "unisetspan.cpp",
        "uniset_closure.cpp",
        "uniset_props.cpp",
        "unistr.cpp",
        "unistr_case.cpp",
        "unistr_case_locale.cpp",
        "unistr_cnv.cpp",
        "unistr_props.cpp",
        "unistr_titlecase_brkiter.cpp",
        "unorm.cpp",
        "unormcmp.cpp",
        "unum.cpp",
        "unumsys.cpp",
        "uobject.cpp",
        "upluralrules.cpp",
        "uprops.cpp",
        "uregex.cpp",
        "uregexc.cpp",
        "uregion.cpp",
        "uresbund.cpp",
        "uscript_props.cpp",
        "usearch.cpp",
        "uset.cpp",
        "usetiter.cpp",
        "uset_props.cpp",
        "ushape.cpp",
        "uspoof.cpp",
        "uspoof_build.cpp",
        "uspoof_conf.cpp",
        "uspoof_impl.cpp",
        "uspoof_wsconf.cpp",
        "usprep.cpp",
        "ustack.cpp",
        "ustrcase.cpp",
        "ustrcase_locale.cpp",
        "ustrenum.cpp",
        "ustring.cpp",
        "ustrtrns.cpp",
        "ustr_cnv.cpp",
        "ustr_titlecase_brkiter.cpp",
        "ustr_wcs.cpp",
        "utext.cpp",
        "utf16collationiterator.cpp",
        "utf8collationiterator.cpp",
        "util.cpp",
        "util_props.cpp",
        "utrans.cpp",
        "utrie.cpp",
        "utrie2.cpp",
        "utrie2_builder.cpp",
        "uts46.cpp",
        "uvector.cpp",
        "uvectr32.cpp",
        "uvectr64.cpp",
        "valueformatter.cpp",
        "visibledigits.cpp",
        "vtzone.cpp",
        "vzone.cpp",
        "windtfmt.cpp",
        "winnmfmt.cpp",
        "wintzimpl.cpp",
        "zonemeta.cpp",
        "zrule.cpp",
        "ztrans.cpp",
    ]
    configs += [
        ":icu_config",
        ":icu_include",
    ]
    public_configs = [
        ":icu_include",
    ]
}

config("icu_config") {
    defines = [
        "U_STATIC_IMPLEMENTATION",
        "U_COMMON_IMPLEMENTATION",
        "U_I18N_IMPLEMENTATION",
        "U_ATTRIBUTE_DEPRECATED=",
        "HAVE_DLFCN_H=0",
        "HAVE_DLOPEN=0",
    ]
    if (target_os != "win") {
        cflags = [
            "-Wno-enum-compare-switch"
        ]
    } else {
        cflags = [
            "/wd4018",
            "/wd4090",
            "/wd4138",
            "/wd4244",
            "/wd4251",
            "/wd4267",
            "/wd4275",
            "/wd4477",
            "/wd4595",
            "/wd4996",
        ]
        libs = [
            "Advapi32.lib",
        ]
    }
}

config("icu_include") {
    include_dirs = [
        "."
    ]
}
