shared_library("pthreads") {
    sources = [
        "src/pthread.c"
    ]
    configs += [
        ":pthreads_config",
    ]
    public_configs = [
        ":pthreads_config_public",
    ]
}

config("pthreads_config") {
    defines = [
        "PTW32_BUILD",
    ]
    include_dirs = [
        "src"
    ]
    libs = [
        "Ws2_32.lib",
    ]
}

config("pthreads_config_public") {
    include_dirs = [
        "include",
    ]
}